Add secret and other options to play startup